--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,7 +1,14 @@
 doctype html 
 html(lang ="ko")
     head    
-        block head
+        title #{pageTitle} | Wetube
+        link(rel="stylesheet" href="https://unpkg.com/mvp.css")
     body 
+        header 
+            nav 
+                ul 
+                    li
+                        a(href="/login") Login
+            h1=pageTitle 
         block content 
     include partials/footer.pug  
