--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,7 +1,8 @@
 extends base.pug
-
-block head 
-    title Home | Wetube
+include mixins/video
 
 block content 
-    h1 Home! 
+    h1 Home!    
+        ul 
+            each video in videos
+                +video(video) 
